M004/S01: Java modern idioms
- 6 DTOs converted to Java Records (LoginRequest, CreateUserRequest,
  UpdateUserRequest, TokenPair, UserResponse, SearchResults)
- ScanStatus/TrackMetadata kept as Lombok (mutable/builder)
- TokenHashUtil extracted from duplicated hashToken in AuthService/RefreshTokenService
- Record accessor style (username() vs getUsername()) throughout
- List.of() replaces Collections.emptyList()
- var applied consistently in RefreshTokenService
- 97 tests pass, JaCoCo >=80% enforced